--- a/.env
+++ b/.env
@@ -21,9 +21,11 @@ APP_SECRET=5001a768eebf8e62a02dfe95d21ec18b
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL="mysql://root:root@mariadb.dock:3306/news?serverVersion=mariadb-10.6.4"
+# DATABASE_URL="mysql://root:root@mariadb.dock:3306/news?serverVersion=mariadb-10.6.4"
 ###< doctrine/doctrine-bundle ###
 
-
+# Start page for get news
 PG=1
+
+# Number of default news
 ON=5
