feat: added JWT authentication

--- a/.env
+++ b/.env
@@ -29,3 +29,9 @@ PG=1
 
 # Number of default news
 ON=5
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=29f90f25550202d44e5c5cc7ae6804d5
+###< lexik/jwt-authentication-bundle ###
