feat: added JWT Refresh Token

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,7 +32,10 @@ security:
         api:
             pattern: ^/
             stateless: true
+            entry_point: jwt
             jwt: ~
+            refresh_jwt:
+                check_path: /token/refresh
         main:
             lazy: true
             provider: app_user_provider
@@ -46,7 +49,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/(login|token/refresh), roles: PUBLIC_ACCESS }
 
 when@test:
     security:
