--- a/.env
+++ b/.env
@@ -35,3 +35,7 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=29f90f25550202d44e5c5cc7ae6804d5
 ###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^.*$'
+###< nelmio/cors-bundle ###
