--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,13 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "beberlei/doctrineextensions": "^1.3",
-        "claviska/simpleimage": "^2.5",
+        "claviska/simpleimage": "^3.7",
         "doctrine/annotations": "^1.13",
-        "doctrine/doctrine-bundle": "^2.6",
+        "doctrine/doctrine-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.12",
         "flowjs/flow-php-server": "^1.0",
@@ -18,25 +18,18 @@
         "lexik/jwt-authentication-bundle": "^2.15",
         "nelmio/cors-bundle": "^2.2",
         "sensio/framework-extra-bundle": "^6.2",
-        "symfony/console": "5.4.*",
-        "symfony/dotenv": "5.4.*",
-        "symfony/flex": "^1.17|^2",
-        "symfony/framework-bundle": "5.4.*",
-        "symfony/mime": "5.4.*",
-        "symfony/property-access": "5.4.*",
-        "symfony/proxy-manager-bridge": "5.4.*",
-        "symfony/runtime": "5.4.*",
-        "symfony/security-bundle": "5.4.*",
-        "symfony/serializer": "5.4.*",
-        "symfony/string": "5.4.*",
-        "symfony/validator": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/debug-bundle": "6.2.*",
+        "symfony/dotenv": "6.2.*",
+        "symfony/flex": "*",
+        "symfony/framework-bundle": "6.2.*",
+        "symfony/runtime": "*",
+        "symfony/serializer": "6.2.*",
+        "symfony/validator": "6.2.*",
+        "symfony/yaml": "6.2.*"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "symfony/debug-bundle": "5.4.*",
-        "symfony/maker-bundle": "^1.40",
-        "symfony/var-dumper": "5.4.*"
+        "symfony/maker-bundle": "*"
     },
     "config": {
         "allow-plugins": {
@@ -83,7 +76,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "6.2.*"
         }
     }
 }
