--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -15,6 +15,7 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+                type: attribute
         dql:
                 datetime_functions:
                     DATE_FORMAT: DoctrineExtensions\Query\Mysql\DateFormat
