--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/flex": "*",
         "symfony/form": "6.2.*",
         "symfony/framework-bundle": "6.2.*",
+        "symfony/mime": "6.2.*",
         "symfony/runtime": "*",
         "symfony/serializer": "6.2.*",
         "symfony/validator": "6.2.*",
